# scrubby-buddy

./: .gitignore  .grype.yaml  README.md  package-lock.json  package.json  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test-frontend.yml
src/: app.html
src-tauri/: Cargo.toml  kani.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/components/: KawaiBear.svelte  KawaiBear.svelte.spec.ts
src/lib/tests/: page.svelte.spec.ts
src/routes/: +page.svelte
