[package]
name = "OwO_scrubby_buddy"
version = "0.0.1"
description = "Remove metadata from pictures"
authors = ["clean-pic developers"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "OwO_scrubby_buddy"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2"
log = "0.4.29"
image = "0.25.9"
img-parts = "0.4.0"
rand = {version = "0.9", features= ["os_rng"] }
kamadak-exif = "0.6.1"

[dev-dependencies]
tempfile = "3.27.0"

